--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^3.8.8",
     "gulp-browserify": "^0.5.0",
     "gulp-cached": "^1.0.1",
+    "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
     "gulp-jshint": "^1.8.4",
     "gulp-ruby-sass": "^0.7.1",
