--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "devDependencies": {
     "browser-sync": "^1.3.7",
     "gulp": "^3.8.8",
+    "gulp-autoprefixer": "^1.0.1",
     "gulp-browserify": "^0.5.0",
     "gulp-cached": "^1.0.1",
     "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
     "gulp-jshint": "^1.8.4",
+    "gulp-minify-css": "^0.3.10",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-scss-lint": "^0.1.3",
     "jshint-stylish": "^1.0.0"
