--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
     "gulp-jshint": "^1.8.4",
+    "gulp-load-plugins": "^0.6.0",
     "gulp-minify-css": "^0.3.10",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-scss-lint": "^0.1.3",
