--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   },
   "devDependencies": {
     "browser-sync": "^1.3.7",
+    "event-stream": "^3.1.7",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-browserify": "^0.5.0",
     "gulp-cached": "^1.0.1",
+    "gulp-concat": "^2.4.1",
     "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
     "gulp-jshint": "^1.8.4",
@@ -17,7 +19,10 @@
     "gulp-minify-css": "^0.3.10",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-scss-lint": "^0.1.3",
-    "jshint-stylish": "^1.0.0"
+    "gulp-sourcemaps": "^1.2.2",
+    "gulp-util": "^3.0.1",
+    "jshint-stylish": "^1.0.0",
+    "require-dir": "^0.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
