--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "gulp-concat": "^2.4.1",
     "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
+    "gulp-imagemin": "^1.0.1",
     "gulp-jshint": "^1.8.4",
     "gulp-load-plugins": "^0.6.0",
     "gulp-minify-css": "^0.3.10",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-scss-lint": "^0.1.3",
     "gulp-sourcemaps": "^1.2.2",
+    "gulp-svgmin": "^0.4.6",
+    "gulp-svgstore": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "imagemin-pngcrush": "^1.0.0",
     "jshint-stylish": "^1.0.0",
     "require-dir": "^0.1.0"
   },
